# harpe

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: args.rs  config.rs  lib.rs  main.rs  output.rs  rpc.rs  tui.rs  tui_main.rs
cli/src/commands/: admin.rs  backup.rs  config.rs  game.rs  health.rs  memory.rs  metrics.rs  mod.rs  play.rs  session.rs  user.rs
cli/src/tui/: client.rs  render.rs  state.rs  text.rs
cli/tests/: cli_integration.rs  tui_integration.rs
proto/: Cargo.toml  build.rs
proto/proto/harpe/v1/: harpe.proto
proto/src/: lib.rs
server/: Cargo.toml
server/proto/harpe/v1/: harpe.proto
server/src/: config.rs  domain.rs  engine.rs  error.rs  jobs.rs  lib.rs  llm.rs  main.rs  observability.rs  runtime.rs  store.rs
server/src/api/: grpc.rs
server/src/api/grpc/: admin_service.rs  convert.rs  game_service.rs  health.rs  health_service.rs  memory_service.rs  metrics_service.rs  mod.rs  ownership.rs  pagination.rs  session_service.rs  user_service.rs
server/src/db/: surreal.rs
server/src/db/surreal/: migrations.rs  mod.rs  normalize.rs  relations.rs  rows.rs  search.rs  validation.rs
server/src/domain/: character.rs  event.rs  game.rs  graph.rs  ids.rs  job.rs  location.rs  memory.rs  message.rs  session.rs  user.rs  world_fact.rs
server/src/engine/: budget.rs  builder.rs  format.rs  tests.rs  token.rs  vector.rs
server/src/jobs/: memory_update.rs  payload.rs  retry.rs  runner.rs  tests.rs
server/src/llm/: config.rs  echo.rs  embedding.rs  extraction.rs  openai.rs  prompts.rs  sse.rs  tests.rs  types.rs
server/tests/: backend_integration.rs  memory_eval.rs  persistent_surreal.rs  provider_conformance.rs
server/tests/fixtures/: combat_memory_eval.json  harbor_memory_eval.json  inventory_memory_eval.json  social_memory_eval.json  travel_memory_eval.json
