[package]
name = "harpe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "harpe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
futures-util = "0.3.31"
harpe-server = { path = "../server" }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.6"

[dev-dependencies]
tokio-stream = { version = "0.1.17", features = ["net"] }
uuid = { version = "1.23.1", features = ["v7"] }
