[package]
name = "harpe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "harpe"
path = "src/main.rs"

[[bin]]
name = "harpe-tui"
path = "src/tui_main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
crossterm = "0.28.1"
futures-util = "0.3.31"
harpe-server = { path = "../server" }
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
textwrap = "0.16.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.6"
tui-textarea = "0.7.0"
unicode-width = "=0.2.0"

[dev-dependencies]
tokio-stream = { version = "0.1.17", features = ["net"] }
uuid = { version = "1.23.1", features = ["v7"] }
