[package]
name = "harpe-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
async-stream = "0.3.6"
chrono = { version = "0.4.42", features = ["serde"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
prost = "0.14.1"
prost-types = "0.14.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "3.0.5", default-features = false, features = ["kv-mem", "protocol-ws", "rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
assert_matches = "1.5.0"
